# elora

./: .gitignore  .travis.yml  README.rst  deploy-key.enc  setup.cfg  setup.py
docs/: conf.py  deploy_script.sh  example.rst  index.rst  plot_tests.py  tests.rst  usage.rst
elora/: __init__.py  elora.py
src/elora/: elora.py
src/elora.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/elora/test/: test.py
tests/: test_elora.py
