[metadata]
name = elora
author = J. Scott Moreland
author-email = morelandjs@gmail.com
version = 0.1
description = Elo regression algorithm (elora)
long-description = README.md

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
  =src
install_requires =
  numpy
  scipy
setup_requires =
  sphinx
tests_require = pytest

[options.packages.find]
where = src

[test]
addopts = tests

[aliases]
tests = pytest
docs = build_sphinx

[build_sphinx]
source_dir = docs
build_dir = docs/_build
