[metadata]
name = elora
version = attr: elora.__version__
description = Elo regression algorithm (elora)
long_description = file: README.rst
long_description_content_type = text/reStructuredText
author = J. Scott Moreland
author_email = morelandjs@gmail.com
url = 'https://github.com/morelandjs/elora'
license = 'MIT',
platforms = any
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
  =src
install_requires =
  numpy
  scipy
tests_require =
  pytest

[options.packages.find]
where = src
exclude = tests

[tool.pytest]
minversion = 6.0
addopts = tests --verbose -s
norecursedirs =
  dist
  build
  .tox

[bdist_wheel]
universal = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[flake8]
max-line-length = 80
doctests = True
exclude = .git, .eggs, .pyc, tests, docs, dist, _build
